tests/fixtures/invalid/set_add_list.py
# Cannot add Set[int] and List[int]
x: set[int] = {1, 2, 3} + [1, 2, 3]
